[gd_scene load_steps=9 format=3 uid="uid://b5qt7kwunu5y0"]

[ext_resource type="Script" path="res://scenes/levels/gym_game/running_minigame/running_minigame.gd" id="1_cvg8g"]
[ext_resource type="Texture2D" uid="uid://b1wo8w1fl4irr" path="res://scenes/levels/gym_game/gym_assets/purplerect.png" id="2_hnkih"]
[ext_resource type="Texture2D" uid="uid://df8n8ogujkvch" path="res://scenes/levels/gym_game/gym_assets/icon_color.png" id="3_a8vb2"]
[ext_resource type="Texture2D" uid="uid://dli486nftixvk" path="res://scenes/actors/characters/new-moon-under.png" id="4_6hwy5"]
[ext_resource type="Texture2D" uid="uid://cwaxgb3gila1x" path="res://scenes/actors/characters/new-moon-progress.png" id="5_3x657"]
[ext_resource type="Script" path="res://scenes/levels/gym_game/running_minigame/RunningProgress.gd" id="6_j40dp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w12w4"]
size = Vector2(6, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7re2s"]

[node name="RunningMinigame" type="Node2D"]
position = Vector2(-526, -34)
scale = Vector2(2, 2)
script = ExtResource("1_cvg8g")

[node name="Bar" type="Sprite2D" parent="."]
modulate = Color(0.176471, 0.690196, 0.32549, 1)
self_modulate = Color(0.415686, 0.635294, 0.909804, 1)
position = Vector2(310, 173.417)
scale = Vector2(0.313103, 1.34136)
texture = ExtResource("2_hnkih")

[node name="UI_overlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 136.0
offset_top = 30.492
offset_right = 136.0
offset_bottom = 30.492
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Container" type="Container" parent="UI_overlay"]
layout_mode = 0
offset_left = 204.0
offset_top = 18.0
offset_right = 244.0
offset_bottom = 58.0
mouse_filter = 2

[node name="Directions" type="Button" parent="UI_overlay/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Tap SPACE to a steady rythm to run"

[node name="YouWinButton" type="Button" parent="."]
offset_left = 384.0
offset_top = 128.0
offset_right = 512.0
offset_bottom = 191.0
text = "Done!"

[node name="Target" type="Area2D" parent="."]
position = Vector2(310, 115)

[node name="TargetCollider" type="CollisionShape2D" parent="Target"]
position = Vector2(0, -1.52588e-05)
shape = SubResource("RectangleShape2D_w12w4")

[node name="Texture" type="Sprite2D" parent="Target"]
scale = Vector2(0.313103, 0.342246)
texture = ExtResource("2_hnkih")

[node name="LilDude" type="Area2D" parent="."]
position = Vector2(310, 189)

[node name="LilDudeCollider" type="CollisionShape2D" parent="LilDude"]
scale = Vector2(-0.68, -0.68)
shape = SubResource("RectangleShape2D_7re2s")

[node name="Texture" type="Sprite2D" parent="LilDude"]
rotation = 3.14159
scale = Vector2(-0.015, -0.015)
texture = ExtResource("3_a8vb2")

[node name="RunningProgress" type="TextureProgressBar" parent="."]
offset_left = 533.5
offset_top = 107.0
offset_right = 1045.5
offset_bottom = 619.0
scale = Vector2(0.25, 0.25)
fill_mode = 4
texture_under = ExtResource("4_6hwy5")
texture_progress = ExtResource("5_3x657")
script = ExtResource("6_j40dp")

[connection signal="area_entered" from="Target" to="." method="_on_target_area_entered"]
[connection signal="area_exited" from="Target" to="." method="_on_target_area_exited"]
[connection signal="value_changed" from="RunningProgress" to="." method="_on_texture_progress_bar_value_changed"]
